feat: document favorite API
